--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,4 +65,4 @@ smtp.host = "smtp.meta.ua"
 smtp.port = 465
 smtp.ssl = yes
 smtp.user = "antey007@meta.ua"
-smtp.password = "19931971"
+smtp.password = ""
